--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <div class="bt_icon_styled">
             <div class="bt_icon">
               <img
-                src="/asset/BT Meta logo white .svg"
+                src="./asset/BT Meta logo white .svg"
                 alt="Bt Meta Logo Icon"
               />
             </div>
